--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../builds/Offshoot/Myrkwood: Offshoot.dmg"
+export_path="../builds/offshoot/Offshoot.dmg"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
