--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -257,13 +257,13 @@ rm -rf \"{temp_dir}\""
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../builds/Offshoot/Myrkwood: Offshoot.exe"
+export_path="../builds/Offshoot/Offshoot.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
